// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toaster - Snapshots > matches snapshot for Toaster with single toast 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-16 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      class="group pointer-events-auto relative flex w-full items-center justify-between gap-2 overflow-hidden rounded-lg border p-6 shadow-lg backdrop-blur-[10px] transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-bottom-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full border-brand/32 bg-brand/8"
      data-cy="toast"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      data-variant="default"
      style="user-select: none; touch-action: none;"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="size-5 shrink-0 text-brand"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          id="radix-normalized"
        >
          <circle
            cx="12"
            cy="12"
            fill="white"
            r="10"
          />
          <path
            d="M8 12.5 10.5 15 16 9"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
        </mask>
        <circle
          cx="12"
          cy="12"
          fill="currentColor"
          mask="url(#radix-normalized)"
          r="10"
        />
      </svg>
      <div
        class="flex max-h-32 min-w-0 flex-1 flex-col items-start justify-center gap-0.5 overflow-y-auto overscroll-y-contain"
      >
        <div
          class="min-w-0 text-sm leading-normal font-bold break-words text-popover-foreground"
        >
          Test Toast
        </div>
        <div
          class="min-w-0 text-sm wrap-anywhere text-muted-foreground"
        >
          This is a test toast message
        </div>
      </div>
      <div
        class="flex shrink-0 items-center gap-2"
      />
    </li>
  </ol>
  <span
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with title-only toast 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-16 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      class="group pointer-events-auto relative flex w-full items-center justify-between gap-2 overflow-hidden rounded-lg border p-6 shadow-lg backdrop-blur-[10px] transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-bottom-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full border-brand/32 bg-brand/8"
      data-cy="toast"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      data-variant="default"
      style="user-select: none; touch-action: none;"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="size-5 shrink-0 text-brand"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          id="radix-normalized"
        >
          <circle
            cx="12"
            cy="12"
            fill="white"
            r="10"
          />
          <path
            d="M8 12.5 10.5 15 16 9"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
        </mask>
        <circle
          cx="12"
          cy="12"
          fill="currentColor"
          mask="url(#radix-normalized)"
          r="10"
        />
      </svg>
      <div
        class="flex max-h-32 min-w-0 flex-1 flex-col items-start justify-center gap-0.5 overflow-y-auto overscroll-y-contain"
      >
        <div
          class="min-w-0 text-sm leading-normal font-bold break-words text-popover-foreground"
        >
          Simple Toast
        </div>
      </div>
      <div
        class="flex shrink-0 items-center gap-2"
      />
    </li>
  </ol>
  <span
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for Toaster with toast with action 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style=""
  tabindex="-1"
>
  <span
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
  <ol
    class="fixed bottom-16 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  >
    <li
      class="group pointer-events-auto relative flex w-full items-center justify-between gap-2 overflow-hidden rounded-lg border p-6 shadow-lg backdrop-blur-[10px] transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-bottom-full data-[state=open]:slide-in-from-bottom-full data-[state=open]:sm:slide-in-from-bottom-full border-brand/32 bg-brand/8"
      data-cy="toast"
      data-radix-collection-item=""
      data-state="open"
      data-swipe-direction="right"
      data-variant="default"
      style="user-select: none; touch-action: none;"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="size-5 shrink-0 text-brand"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          id="radix-normalized"
        >
          <circle
            cx="12"
            cy="12"
            fill="white"
            r="10"
          />
          <path
            d="M8 12.5 10.5 15 16 9"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
        </mask>
        <circle
          cx="12"
          cy="12"
          fill="currentColor"
          mask="url(#radix-normalized)"
          r="10"
        />
      </svg>
      <div
        class="flex max-h-32 min-w-0 flex-1 flex-col items-start justify-center gap-0.5 overflow-y-auto overscroll-y-contain"
      >
        <div
          class="min-w-0 text-sm leading-normal font-bold break-words text-popover-foreground"
        >
          Toast with Action
        </div>
        <div
          class="min-w-0 text-sm wrap-anywhere text-muted-foreground"
        >
          This toast has an action button
        </div>
      </div>
      <div
        class="flex shrink-0 items-center gap-2"
      >
        <button
          class="inline-flex h-8 shrink-0 cursor-pointer items-center justify-center rounded-full border px-3 text-xs font-bold transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 shadow-xs bg-toast-action-muted text-foreground hover:border-toast-action-muted-hover-border"
          data-radix-toast-announce-alt="Undo"
          data-radix-toast-announce-exclude=""
          type="button"
        >
          Undo
        </button>
      </div>
    </li>
  </ol>
  <span
    style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="0"
  />
</div>
`;

exports[`Toaster - Snapshots > matches snapshot for empty Toaster 1`] = `
<div
  aria-label="Notifications (F8)"
  role="region"
  style="pointer-events: none;"
  tabindex="-1"
>
  <ol
    class="fixed bottom-16 left-1/2 z-[100] flex max-h-screen w-full -translate-x-1/2 flex-col-reverse p-4 sm:bottom-8 sm:max-w-[550px]"
    tabindex="-1"
  />
</div>
`;
